# temp-vis

./: Makefile  README.md  pyproject.toml  requirements.txt  task.md
temp_vis/: data.py  graphics.py  temperatures.py  visualization.py
temp_vis/scripts/: cli.py
temperature_data/: temperatures.json
