[tool.poetry]
name = "temp-vis"
version = "0.1.0"
description = ""
authors = ["Vadim Gusak <gusakvd@gmail.com>"]
readme = "README.md"
packages = [{include = "temp_vis"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
