[tool.poetry]
name = "temp-vis"
version = "0.1.0"
description = ""
authors = ["Vadim Gusak <gusakvd@gmail.com>"]
readme = "README.md"
packages = [{include = "temp_vis"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy-stl = "^3.0.0"
plotly = "^5.12.0"
urllib3 = "^1.26.14"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
temp-vis = "temp_vis.scripts.cli:main"
